# serializer

./: CMakeLists.txt
src/: serializer.cpp  serializer.h  sync.cpp  sync.h
test/: main.cpp  polymorphic_map.cpp  polymorphic_vector.cpp
